--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ optional-field = "0.1.3"
 
 [dev-dependencies]
 criterion = "0.4.0"
+assert_cmd = "2.0.7"
+predicates = "2.1.5"
 
 [[bench]]
 name = "benchmarks"
