--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,3 +30,12 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
+
+  security-audit:
+    name: Security Audit
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/audio-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
